<resources>
    <string name="app_name">Apna Fund</string>
    <string name="tab_item_fund">Fund</string>
    <string name="tab_item_members">Members</string>
    <string name="tab_item_deposit">Deposit</string>
    <string name="menu_item_pin">Change PIN</string>
    <string name="menu_item_pwd">Change Password</string>
    <string name="menu_item_theme">Change Theme</string>
    <string name="menu_item_profile">Edit Profile</string>
    <string name="menu_item_feedback">Send Feedback</string>
    <string name="menu_item_share">Share App</string>
    <string name="menu_item_logout">Logout</string>
    <string name="button_saving_progress">Saving....</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_fund_name">Fund Name: <i>(minimum 3 char)</i></string>
    <string name="text_view_fund_name">Fund Name:</string>
    <string name="header_view_fund_name">Fund Name</string>
    <string name="text_fund_start_date">Start Date</string>
    <string name="text_fund_maturity_date">Maturity Date</string>
    <string name="text_fund_period">Period:</string>
    <string name="text_deposit_frequency">Frequency</string>
    <string name="text_deposit_amount">Deposit Amount</string>
    <string name="text_group">Groups</string>
    <string name="text_fund_summary">Fund Summary</string>
    <string name="text_admin">Admin</string>
    <string name="text_user">Users</string>
    <string name="text_fund">Fund</string>
    <string name="text_interest">Interest</string>
    <string name="text_save">Save</string>
    <string name="text_total">Total: %1$s</string>
    <string name="text_available">Available: %1$s</string>
    <string name="text_approved_amt">Approved: %1$s</string>
    <string name="text_pending">Pending: %1$s</string>
    <string name="text_moderator">Moderator:</string>
    <string name="text_group_name">Group Name</string>
    <string name="text_select_moderator">Select Moderator</string>
    <string name="text_select_group">Select Group</string>
    <string name="text_select_member">Select Member</string>
    <string name="text_select_fund">Select Fund</string>
    <string name="text_edit">Edit</string>
    <string name="text_month">Select Month</string>
    <string name="text_year"> Select Year</string>
    <string name="text_date">Date</string>
    <string name="text_prepay">Prepay</string>
    <string name="text_emi_amount">EMI Amount</string>
    <string name="text_late_fee">Late Fee</string>
    <string name="text_loan_emi_entries">Loan EMI Entries</string>
    <string name="text_save_loan_emi">Save Loan EMI</string>
    <string name="text_first_name">First Name</string>
    <string name="text_email_id">Email Id</string>
    <string name="text_phone">Phone</string>
    <string name="text_group_details">Group Details</string>
    <string name="text_user_summary">User Summary</string>
    <string name="welcome_message">Welcome, %1$s!</string>
    <string name="text_borrower">Borrower</string>
    <string name="text_principal">Curr Principal</string>
    <string name="text_issue_date">Issue Date</string>
    <string name="text_period_months">Period (months)</string>
    <string name="text_rate_of_interest">Rate of Interest (%)</string>
    <string name="text_save_loan">Save Loan</string>
    <string name="text_amount">Amount</string>
    <string name="text_last_name_optional">Last Name <i>(optional)</i></string>
    <string name="text_period">Period <i>(months)</i></string>
    <string name="text_save_button">Save</string>
    <string name="text_cancel_button">Cancel</string>
    <string name="text_start_date">Start Date</string>
    <string name="text_loan_interest_rate">Interest Rate (%) <i>(yearly)</i></string>
    <string name="text_late_fee_rate_in_per_day">Late Fee Rate <i>(in per day)</i></string>
    <string name="text_monthly_deposit_last_date">Monthly Deposit Last Date <i>(between 1 , 31)</i></string>
    <string name="text_update_fund">Update Fund</string>
    <string name="text_update_loan">Update Loan</string>
    <string name="status_closed">[Closed]</string>
    <string name="status_active">[Active]</string>
    <string name="status_pending">[Pending]</string>
    <string name="text_deposits">Deposits</string>
    <string name="text_deposited_date">Deposited Date</string>
    <string name="text_deposits_entries">Deposit Entries</string>
    <string name="text_save_deposits">Save Deposits</string>
    <string name="text_loan_emi">Loans EMI</string>
    <string name="text_leave">Leave</string>
    <string name="text_status">Status</string>
    <string name="text_workflow">Workflow</string>
    <string name="text_issued">Issued</string>
    <string name="text_loan_num">Loans#</string>
    <string name="text_stay">Stay</string>
    <string name="text_zero">0</string>
    <string name="text_zero_amount">₹0</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_no_fund_activity">No fund activity yet</string>
    <string name="cancel_email_verify_message">Cancel Email Verification?</string>
    <string name="expand_or_collapse">Expand Or Collapse</string>
    <string name="server_issue_message">Some issues with server. Please raise a support ticket or contact admin.</string>
    <string name="code_expired_message">Code expired</string>
    <string name="invalid_expired_code_message">Invalid or expired code</string>
    <string name="code_expiry_timer">Code expires in %1$02d:%2$02d</string>
    <string name="resend_available_timer">Resend available in %02d:%02d</string>
    <string name="successful_email_verification_message">Email verified successfully</string>
    <string name="error_resend_wait">Please wait a moment before requesting another code.</string>
    <string name="group_label">Group: %1$s</string>
    <string name="text_loan">Loans:</string>
    <string name="text_warning_confirmation">Are you sure you want to %1$s %2$s %3$s?</string>
    <string name="text_existing_user_error_message">A user with this email or phone already exists.</string>
    <string name="text_welcome_message">Welcome, %1$s</string>
    <string name="text_group_user">Group: %1$s</string>
    <string name="text_fund_deposits">Fund Deposits</string>
    <string name="text_serial_number"># No:</string>
    <string name="text_member">Member</string>
    <string name="text_outstanding">Outstanding</string>
    <string name="text_total_deposited_amount">Total Deposited Amount</string>
    <string name="text_total_loan_amount">Total Loan Amount</string>
    <string name="text_total_pending_amount">Total Pending Amount</string>
    <string name="text_total_interest_paid">Total Interest Paid</string>
    <string name="text_expected_maturity_amount">Expected Maturity Amount</string>
    <string name="text_apply_loan">Apply Loan</string>
    <string name="text_fund_loan_summary">Fund Loans Summary</string>
    <string name="text_frequency">Frequency</string>
    <string name="text_monthly_contribution">Monthly Contribution:</string>
    <string name="text_total_expected_deposit">Total Expected Deposit:</string>
    <string name="text_total_current_deposit">Total Current Deposit:</string>
    <string name="text_total_expected_maturity">Total Expected Maturity:</string>
    <string name="text_view_fund_deposits">View Fund Deposits</string>
    <string name="text_detailed_fund_summary">Detailed Fund Summary</string>
    <string name="text_loans_header">Loans</string>
    <string name="text_no_loan_message">You have not taken any Loan yet for this fund. Click Apply New Loan if you want a Loan</string>
    <string name="text_apply_new_loan">Apply New Loan</string>
    <string name="text_member_name">%1$s %2$s</string>
    <string name="contact_number">+91 9372344640</string>
    <string name="amount_rupee">₹%1$s</string>
    <string name="fund_loans_title">%1$s - Loans</string>
    <string name="text_contact_information">Contact Information</string>
    <string name="text_contact_us">Contact Us</string>
    <string name="support_email">support@mynikatech.in</string>
    <string name="text_empty_feedback_error">Error loading feedback</string>
    <string name="terms_disclaimer_heading">Terms/Disclaimer</string>
    <string name="Disclaimer_message_1">This app is a community-based financial record-keeping tool. It does not hold funds, enforce transactions, or offer financial advice. All financial arrangements are private agreements among users. The platform is not responsible for disputes or defaults.</string>
    <string name="disclaimer_message_2">Usage fees if any are charged for software features only and are not linked to loan amounts or repayments.</string>
    <string name="asterik_heading">*</string>
    <string name="user_name_label">User: %1$s</string>
    <string name="group_name_label">Group: %1$s</string>
    <string name="message_text_no_funds">There is no funds created yet.</string>
    <string name="message_no_assigned_group">You are not assigned to any group yet.</string>
    <string name="text_add_group">Add Group</string>
    <string name="header_add_group">(Add Group)</string>
    <string name="header_group">Group: %1$s</string>
    <string name="text_fund_status">Fund Status</string>
    <string name="text_dropdown_arrow">Dropdown Arrow</string>
    <string name="text_view_details">View Details -</string>
    <string name="text_welcome_user">Welcome, User!</string>
    <string name="text_edit_fund">Edit Fund</string>
    <string name="text_issued_date">Issued Date</string>
    <string name="text_interest_rate">Interest Rate</string>
    <string name="text_loan_period">Loan Period</string>
    <string name="text_outstanding_amount">OutStanding Amt:</string>
    <string name="text_original_emi">Original EMI:</string>
    <string name="text_current_emi">Current EMI:</string>
    <string name="text_interest_paid">Interest Paid:</string>
    <string name="text_view_loan_emis">View Loan Emis</string>
    <string name="text_type_message">Type Message</string>
    <string name="text_ai_assistant">AI Assistant</string>
    <string name="text_home">Home</string>
    <string name="text_funds">Funds</string>
    <string name="text_chat">Chat</string>
    <string name="text_assistant">Assistant</string>
    <string name="text_settings">Settings</string>
    <string name="text_ai_message">AI message</string>
    <string name="text_group_description">Group Description</string>
    <string name="text_total_loan">Total: ₹4000</string>
    <string name="text_select_all">Select All</string>
    <string name="text_add_fund_members">Add Fund Members</string>
    <string name="text_pending_approval">Approvals</string>
    <string name="text_verify_email">Verify your email</string>
    <string name="message_6_digit_verification_code">We sent a 6-digit verification code to:</string>
    <string name="text_enter_6_digit_code">Enter 6-digit code</string>
    <string name="header_verify_email">Verify Email</string>
    <string name="message_not_receive">Didn’t receive it?</string>
    <string name="message_resend_code">Resend code</string>
    <string name="message_back_to_login">Back to login</string>
    <string name="text_code_expires">Code expires in 00:00</string>
    <string name="text_resend_available">Resend available in 00:30</string>
    <string name="title_loan_details">Loan Details</string>
    <string name="label_status">Status:</string>
    <string name="label_issued_date">Issued Date:</string>
    <string name="label_interest_paid">Interest Paid:</string>
    <string name="label_outstanding">Outstanding:</string>
    <string name="label_borrower">Borrower:</string>
    <string name="label_loan_no">Loan No:</string>
    <string name="label_amount">Amount:</string>
    <string name="menu_item_language">Change Language</string>
    <string name="text_loan_maturity_date">Maturity Date</string>
</resources>