<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_PIN"
        android:title="@string/menu_item_pin"
        android:icon="@drawable/ic_pin_lock" />

    <item
        android:id="@+id/menu_password"
        android:title="@string/menu_item_pwd"
        android:icon="@drawable/ic_lock_reset" />

    <item
        android:id="@+id/menu_theme"
        android:title="@string/menu_item_theme"
        android:icon="@drawable/ic_themes" />

    <item
        android:id="@+id/menu_language"
        android:title="@string/menu_item_language"
        android:icon="@drawable/ic_language" />

    <item
        android:id="@+id/menu_profile"
        android:title="@string/menu_item_profile"
        android:icon="@drawable/ic_profile" />

    <item
        android:id="@+id/menu_feedback"
        android:title="@string/menu_item_feedback"
        android:icon="@drawable/ic_feedback" />

    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_item_share"
        android:icon="@drawable/ic_share" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_item_logout"
        android:icon="@drawable/ic_logout" />

</menu>