<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.member.AddFundMembersFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/fund_add_member_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/ApnaFund.Toolbar"
        app:titleTextColor="@color/white"
        android:title="@string/text_add_fund_members"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/checkbox_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_select_all"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_fund_members"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save_fund_member"
            style="@style/ApnaFundButton.Primary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel_fund_member"
            style="@style/ApnaFundButton.Secondary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_cancel_button" />
    </LinearLayout>
</LinearLayout>